Trying to fix UI on iOS. (Width of input fields)

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -50,7 +50,7 @@ label {
 }
 
 input {
-  margin: 0 0 1rem 0;
+  margin: 0 1rem 1rem 0;
   width: 100%;
   height: 3rem;
   font-size: 2.5rem;
